MiniLenguajeParser.py
# Generated from MiniLenguaje.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniLenguajeParser ( Parser ):

    grammarFileName = "MiniLenguaje.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'if'", "'else'", "'while'", 
                     "'for'", "'print'", "'input'", "'int'", "'float'", 
                     "'string'", "'bool'", "'+'", "'-'", "'*'", "'/'", "'='", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'and'", 
                     "'or'", "';'", "','", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "VAR", "IF", "ELSE", "WHILE", "FOR", 
                      "PRINT", "INPUT", "INT_TYPE", "FLOAT_TYPE", "STRING_TYPE", 
                      "BOOL_TYPE", "PLUS", "MINUS", "MUL", "DIV", "ASSIGN", 
                      "EQ", "NEQ", "LT", "GT", "LE", "GE", "AND", "OR", 
                      "SEMICOLON", "COMMA", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "ID", "INT_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", 
                      "BOOL_LITERAL", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_varDeclaration = 2
    RULE_type = 3
    RULE_assignment = 4
    RULE_ifStatement = 5
    RULE_whileStatement = 6
    RULE_forStatement = 7
    RULE_printStatement = 8
    RULE_inputStatement = 9
    RULE_block = 10
    RULE_expression = 11
    RULE_primary = 12

    ruleNames =  [ "program", "statement", "varDeclaration", "type", "assignment", 
                   "ifStatement", "whileStatement", "forStatement", "printStatement", 
                   "inputStatement", "block", "expression", "primary" ]

    EOF = Token.EOF
    VAR=1
    IF=2
    ELSE=3
    WHILE=4
    FOR=5
    PRINT=6
    INPUT=7
    INT_TYPE=8
    FLOAT_TYPE=9
    STRING_TYPE=10
    BOOL_TYPE=11
    PLUS=12
    MINUS=13
    MUL=14
    DIV=15
    ASSIGN=16
    EQ=17
    NEQ=18
    LT=19
    GT=20
    LE=21
    GE=22
    AND=23
    OR=24
    SEMICOLON=25
    COMMA=26
    LPAREN=27
    RPAREN=28
    LBRACE=29
    RBRACE=30
    ID=31
    INT_LITERAL=32
    FLOAT_LITERAL=33
    STRING_LITERAL=34
    BOOL_LITERAL=35
    WS=36
    COMMENT=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniLenguajeParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLenguajeParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniLenguajeParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniLenguajeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.statement()
                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2684358644) != 0)):
                    break

            self.state = 31
            self.match(MiniLenguajeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self):
            return self.getTypedRuleContext(MiniLenguajeParser.VarDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MiniLenguajeParser.AssignmentContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(MiniLenguajeParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(MiniLenguajeParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(MiniLenguajeParser.ForStatementContext,0)


        def printStatement(self):
            return self.getTypedRuleContext(MiniLenguajeParser.PrintStatementContext,0)


        def inputStatement(self):
            return self.getTypedRuleContext(MiniLenguajeParser.InputStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(MiniLenguajeParser.BlockContext,0)


        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiniLenguajeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 41
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9, 10, 11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.varDeclaration()
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 2)
                self.state = 34
                self.assignment()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 3)
                self.state = 35
                self.ifStatement()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.whileStatement()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 37
                self.forStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 38
                self.printStatement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 7)
                self.state = 39
                self.inputStatement()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 8)
                self.state = 40
                self.block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(MiniLenguajeParser.TypeContext,0)


        def ID(self):
            return self.getToken(MiniLenguajeParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(MiniLenguajeParser.SEMICOLON, 0)

        def ASSIGN(self):
            return self.getToken(MiniLenguajeParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLenguajeParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = MiniLenguajeParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.type_()
            self.state = 44
            self.match(MiniLenguajeParser.ID)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 45
                self.match(MiniLenguajeParser.ASSIGN)
                self.state = 46
                self.expression(0)


            self.state = 49
            self.match(MiniLenguajeParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TYPE(self):
            return self.getToken(MiniLenguajeParser.INT_TYPE, 0)

        def FLOAT_TYPE(self):
            return self.getToken(MiniLenguajeParser.FLOAT_TYPE, 0)

        def STRING_TYPE(self):
            return self.getToken(MiniLenguajeParser.STRING_TYPE, 0)

        def BOOL_TYPE(self):
            return self.getToken(MiniLenguajeParser.BOOL_TYPE, 0)

        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = MiniLenguajeParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3840) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MiniLenguajeParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniLenguajeParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLenguajeParser.ExpressionContext,0)


        def SEMICOLON(self):
            return self.getToken(MiniLenguajeParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = MiniLenguajeParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(MiniLenguajeParser.ID)
            self.state = 54
            self.match(MiniLenguajeParser.ASSIGN)
            self.state = 55
            self.expression(0)
            self.state = 56
            self.match(MiniLenguajeParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MiniLenguajeParser.IF, 0)

        def LPAREN(self):
            return self.getToken(MiniLenguajeParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLenguajeParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MiniLenguajeParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLenguajeParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniLenguajeParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(MiniLenguajeParser.ELSE, 0)

        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = MiniLenguajeParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(MiniLenguajeParser.IF)
            self.state = 59
            self.match(MiniLenguajeParser.LPAREN)
            self.state = 60
            self.expression(0)
            self.state = 61
            self.match(MiniLenguajeParser.RPAREN)
            self.state = 62
            self.statement()
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 63
                self.match(MiniLenguajeParser.ELSE)
                self.state = 64
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MiniLenguajeParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(MiniLenguajeParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLenguajeParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MiniLenguajeParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(MiniLenguajeParser.StatementContext,0)


        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = MiniLenguajeParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(MiniLenguajeParser.WHILE)
            self.state = 68
            self.match(MiniLenguajeParser.LPAREN)
            self.state = 69
            self.expression(0)
            self.state = 70
            self.match(MiniLenguajeParser.RPAREN)
            self.state = 71
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MiniLenguajeParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(MiniLenguajeParser.LPAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLenguajeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniLenguajeParser.ExpressionContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(MiniLenguajeParser.SEMICOLON)
            else:
                return self.getToken(MiniLenguajeParser.SEMICOLON, i)

        def RPAREN(self):
            return self.getToken(MiniLenguajeParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(MiniLenguajeParser.StatementContext,0)


        def varDeclaration(self):
            return self.getTypedRuleContext(MiniLenguajeParser.VarDeclarationContext,0)


        def assignment(self):
            return self.getTypedRuleContext(MiniLenguajeParser.AssignmentContext,0)


        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = MiniLenguajeParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(MiniLenguajeParser.FOR)
            self.state = 74
            self.match(MiniLenguajeParser.LPAREN)
            self.state = 78
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8, 9, 10, 11]:
                self.state = 75
                self.varDeclaration()
                pass
            elif token in [31]:
                self.state = 76
                self.assignment()
                pass
            elif token in [25]:
                self.state = 77
                self.match(MiniLenguajeParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 80
            self.expression(0)
            self.state = 81
            self.match(MiniLenguajeParser.SEMICOLON)
            self.state = 82
            self.expression(0)
            self.state = 83
            self.match(MiniLenguajeParser.RPAREN)
            self.state = 84
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(MiniLenguajeParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(MiniLenguajeParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniLenguajeParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MiniLenguajeParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(MiniLenguajeParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_printStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)




    def printStatement(self):

        localctx = MiniLenguajeParser.PrintStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_printStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(MiniLenguajeParser.PRINT)
            self.state = 87
            self.match(MiniLenguajeParser.LPAREN)
            self.state = 88
            self.expression(0)
            self.state = 89
            self.match(MiniLenguajeParser.RPAREN)
            self.state = 90
            self.match(MiniLenguajeParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUT(self):
            return self.getToken(MiniLenguajeParser.INPUT, 0)

        def LPAREN(self):
            return self.getToken(MiniLenguajeParser.LPAREN, 0)

        def ID(self):
            return self.getToken(MiniLenguajeParser.ID, 0)

        def RPAREN(self):
            return self.getToken(MiniLenguajeParser.RPAREN, 0)

        def SEMICOLON(self):
            return self.getToken(MiniLenguajeParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_inputStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputStatement" ):
                listener.enterInputStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputStatement" ):
                listener.exitInputStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputStatement" ):
                return visitor.visitInputStatement(self)
            else:
                return visitor.visitChildren(self)




    def inputStatement(self):

        localctx = MiniLenguajeParser.InputStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_inputStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(MiniLenguajeParser.INPUT)
            self.state = 93
            self.match(MiniLenguajeParser.LPAREN)
            self.state = 94
            self.match(MiniLenguajeParser.ID)
            self.state = 95
            self.match(MiniLenguajeParser.RPAREN)
            self.state = 96
            self.match(MiniLenguajeParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(MiniLenguajeParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(MiniLenguajeParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLenguajeParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniLenguajeParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = MiniLenguajeParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(MiniLenguajeParser.LBRACE)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2684358644) != 0):
                self.state = 99
                self.statement()
                self.state = 104
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self.match(MiniLenguajeParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniLenguajeParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class MultDivExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLenguajeParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLenguajeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniLenguajeParser.ExpressionContext,i)

        def MUL(self):
            return self.getToken(MiniLenguajeParser.MUL, 0)
        def DIV(self):
            return self.getToken(MiniLenguajeParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultDivExpr" ):
                listener.enterMultDivExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultDivExpr" ):
                listener.exitMultDivExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultDivExpr" ):
                return visitor.visitMultDivExpr(self)
            else:
                return visitor.visitChildren(self)


    class AndExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLenguajeParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLenguajeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniLenguajeParser.ExpressionContext,i)

        def AND(self):
            return self.getToken(MiniLenguajeParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAndExpr" ):
                listener.enterAndExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAndExpr" ):
                listener.exitAndExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAndExpr" ):
                return visitor.visitAndExpr(self)
            else:
                return visitor.visitChildren(self)


    class EqualityExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLenguajeParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLenguajeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniLenguajeParser.ExpressionContext,i)

        def EQ(self):
            return self.getToken(MiniLenguajeParser.EQ, 0)
        def NEQ(self):
            return self.getToken(MiniLenguajeParser.NEQ, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualityExpr" ):
                listener.enterEqualityExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualityExpr" ):
                listener.exitEqualityExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEqualityExpr" ):
                return visitor.visitEqualityExpr(self)
            else:
                return visitor.visitChildren(self)


    class ComparisonExprContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniLenguajeParser.ExpressionContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniLenguajeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniLenguajeParser.ExpressionContext,i)

        def LT(self):
            return self.getToken(MiniLenguajeParser.LT, 0)
        def GT(self):
            return self.getToken(MiniLenguajeParser.GT, 0)
        def LE(self):
            return self.getToken(MiniLenguajeParser.LE, 0)
        def GE(self):
            return self.getToken(MiniLenguajeParser.GE, 0)
